# bibtex-format

./: .gitignore  .tm_properties  .travis.yml  .vimrc  Makefile  Readme  Readme.md  Setup.hs  bibtex-fix.cabal  bibtex-format.cabal  cabal.config
examples/: Abbreviate.json  Expend.json  forBib.json  forBibKeys.json
replacements_examples/: Abbreviate.json
scripts/: BiBTeX New keys.tmCommand  BibTex Format.tmCommand  align_equals.rb  bibtex-fix-aligned.sh  bibtex-format-aligned.sh  makeExpend.py  sente_cite.sh  sente_pick_to_bib.sh  sente_selected_to_bib.sh
src/: BibtexFormat.hs  BibtexNewKeys.hs  Helpers.hs  Main.hs  Strings.hs
