name: bibtex-fix
version: 0.1.1.0
synopsis:
license: BSD3
author: Bilal Syed Hussain
maintainer: bilalshussain@gmail.com
copyright: 2014 Bilal Syed Hussain
build-type: Custom
cabal-version: >=1.18

executable bibtex-fix
    default-language: Haskell2010
    hs-source-dirs: src
    main-is: Main.hs
    build-depends: 
        base
       ,bibtex == 0.1.*
       ,parsec
       ,MissingH
       ,containers
    ghc-options:
        -Wall
