name: bibtex-format
version: 0.3.0
synopsis: Reformat, fixes and transformers BibTeX files
license: BSD3
author: Bilal Syed Hussain
maintainer: bilalshussain@gmail.com
copyright: 2014-2015 Bilal Syed Hussain
build-type: Custom
cabal-version: >=1.18

executable bibtex-format
    default-language: Haskell2010
    hs-source-dirs: src
    main-is: BibtexFormat.hs
    build-depends:
        base
       ,bibtex == 0.1.*
       ,parsec
       ,containers
       ,cmdargs
       ,aeson
       ,bytestring
       ,directory
       ,text
    ghc-options:
        -Wall


executable bibtex-new-keys
    default-language: Haskell2010
    hs-source-dirs: src
    main-is: BibtexNewKeys.hs
    build-depends:
        base
       ,bibtex == 0.1.*
       ,parsec
       ,containers
       ,cmdargs
       ,aeson
       ,bytestring
       ,directory
    ghc-options:
        -Wall
